--- a/www/package.json
+++ b/www/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+     "wasm_game":"file:../pkg",
     "copy-webpack-plugin": "^12.0.2",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
